# pbtracker

./: .gitignore  METHODS_AND_RETROSPECTIVE.md  README.md  app.py  deep_reid_healer.py  graphify.html  main.py  pyproject.toml  tracklet_merger.py
.understand-anything/: .understandignore  fingerprints.json  meta.json
.understand-anything/.trash-1781523356/: assemble-and-validate.cjs  assemble-review.json  assembled-graph.json  batch-1.json  batch-2.json  batch-3.json  batch-4.json  batch-5.json  batches.json  fingerprint-input.json  layers.json  prepare-input.js  review.json  tour.json  ua-arch-analyze.js  ua-arch-input.json  ua-arch-results.json  ua-import-map-input.json  (+10 more)
court_line_detector/: manual_court_selector.py  mini_court.py
dashboard/: README.md  package-lock.json  package.json
debug/: debug_players.py  yolo_inference.py
scratch/: analyze_filtration.py  analyze_std.py  analyze_stubs.py  annotate_frames_debug.py  audit_graph.py  botsort_custom.yaml  check_malaysia.py  check_video_frames.py  detailed_audit.py  extract_all_raw_crops.py  extract_final_frames.py  extract_fine_tuned_frames.py  extract_malaysia_frames.py  extract_newvideo_frames.py  extract_player_crops.py  generate_raw_tracks.py  inspect_malaysia_players.py  prepare_newvideo_stubs.py  print_frame_0.py  rename_stubs.py
trackers/: __init__.py  ball_tracker.py  player_tracker.py
utils/: auto_player_filter.py  ball_physics_analyzer.py  check_ids.py  debug_missing_box.py  export_json.py  extract_crossover_frames.py  generate_id_debug_frame.py  officiating_engine.py  stats_telemetry_tracker.py
(+6 files in other folders)
