[project]
name = "pbtracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphifyy>=0.8.28",
    "lapx>=0.9.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "torch>=2.12.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.0",
    "ultralytics>=8.4.56",
]
