[project]
name = "pbtracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boxmot>=21.0.0",
    "lapx>=0.9.4",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "pandas>=2.2.2",
    "plotly>=6.8.0",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.0",
    "ultralytics>=8.4.56",
]
